--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^8.0",
         "laravel/jetstream": "^1.3",
         "laravel/sanctum": "^2.6",
+        "laravel/telescope": "^4.2",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.2",
         "livewire/livewire": "^2.0",
