--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.2",
         "livewire/livewire": "^2.0",
+        "mews/captcha": "^3.2",
         "predis/predis": "^1.1"
     },
     "require-dev": {
