--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "laravel/telescope": "^4.2",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.2",
-        "livewire/livewire": "^2.0",
+        "livewire/livewire": "2.3.1",
         "mews/captcha": "^3.2",
         "predis/predis": "^1.1"
     },
