--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "predis/predis": "^1.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.8",
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
