--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     },
     "devDependencies": {
         "@tailwindcss/ui": "^0.5.0",
+        "animate.css": "git@github.com:animate-css/animate.css.git#v3.1.0",
         "axios": "^0.19",
+        "bootstrap": "^5.0.0-alpha1",
         "cross-env": "^7.0",
+        "font-awesome": "^4.7.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
+        "owl.carousel2": "^2.2.1",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.0",
+        "sass": "^1.30.0",
+        "sass-loader": "^8.0.2",
         "tailwindcss": "^1.3.0",
         "vue-template-compiler": "^2.6.12"
     }
