--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@tailwindcss/ui": "^0.5.0",
-        "animate.css": "git@github.com:animate-css/animate.css.git#v3.1.0",
+        "animate.css": "4.1.1",
         "axios": "^0.19",
         "bootstrap": "^5.0.0-alpha1",
         "cross-env": "^7.0",
