--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@tailwindcss/ui": "^0.5.0",
         "animate.css": "4.1.1",
         "axios": "^0.19",
-        "bootstrap": "^5.0.0-alpha1",
+        "bootstrap-v4-rtl": "^4.5.2-1",
         "cross-env": "^7.0",
         "font-awesome": "^4.7.0",
         "laravel-mix": "^5.0.1",
