--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.30.0",
         "sass-loader": "^8.0.2",
+        "simplelightbox": "^2.7.0",
         "tailwindcss": "^1.3.0",
         "vue-template-compiler": "^2.6.12"
     }
