--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.2",
         "livewire/livewire": "^2.0",
+        "mcamara/laravel-localization": "^1.6",
         "mews/captcha": "^3.2",
         "predis/predis": "^1.1"
     },
