--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "laravelcollective/html": "^6.2",
         "livewire/livewire": "^2.0",
         "mews/captcha": "^3.2",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "spatie/laravel-permission": "^3.18"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
